--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"lit": "^3.3.2"
 	},
 	"devDependencies": {
+		"@e280/science": "^0.1.4",
 		"@e280/scute": "^0.1.0",
 		"http-server": "^14.1.1",
 		"npm-run-all": "^4.1.5",
