--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 		"_clean": "rm -rf x",
 		"_tsc": "tsc",
 		"_scute": "scute -v",
-		"start": "octo 'scute -vw' 'tsc -w' 'node --watch x/tests.test.js' 'http-server x -c-1'",
+		"start": "octo 'scute -vw' 'tsc -w' 'node --watch x/tests.test.js' 'node --env-file=dev.env x/server/server.js'",
 		"_ln": "run-s _ln-s _ln-assets",
 		"_ln-s": "ln -s \"$(realpath s)\" x/s",
 		"_ln-assets": "ln -s \"$(realpath assets)\" x/assets",
@@ -28,14 +28,19 @@
 		"count": "find s -path '*/_archive' -prune -o -name '*.ts' -exec wc -l {} +"
 	},
 	"dependencies": {
+		"@e280/renraku": "^0.5.6",
 		"@e280/sly": "^0.2.0-20",
 		"@e280/strata": "^0.2.0-14",
 		"@e280/stz": "^0.2.6",
+		"better-sqlite3": "^12.6.0",
+		"kysely": "^0.28.9",
 		"lit": "^3.3.2"
 	},
 	"devDependencies": {
 		"@e280/science": "^0.1.4",
 		"@e280/scute": "^0.1.0",
+		"@types/better-sqlite3": "^7.6.13",
+		"@types/node": "^25.0.8",
 		"http-server": "^14.1.1",
 		"npm-run-all": "^4.1.5",
 		"typescript": "^5.9.2"
