--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 		"_clean": "rm -rf x",
 		"_tsc": "tsc",
 		"_scute": "scute -v",
-		"start": "octo 'scute -vw' 'tsc -w' 'node --watch x/tests.test.js' 'node --env-file=dev.env x/server/server.js'",
+		"start": "octo 'scute -vw' 'tsc -w' 'node --watch x/tests.test.js' 'node --watch --env-file=dev.env x/server/server.js'",
 		"_ln": "run-s _ln-s _ln-assets",
 		"_ln-s": "ln -s \"$(realpath s)\" x/s",
 		"_ln-assets": "ln -s \"$(realpath assets)\" x/assets",
