--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
 		"@e280/stz": "^0.2.6",
 		"better-sqlite3": "^12.6.0",
 		"kysely": "^0.28.9",
-		"lit": "^3.3.2"
+		"lit": "^3.3.2",
+		"sirv": "^3.0.2"
 	},
 	"devDependencies": {
 		"@e280/science": "^0.1.4",
