--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@e280/shrimple",
-	"version": "0.0.0-9",
+	"version": "0.0.0",
 	"description": "shrimplest cheapest auth on the web ",
 	"license": "MIT",
 	"author": "Chase Moskal <chasemoskal@gmail.com>",
