--- a/dev.env
+++ b/dev.env
@@ -1,6 +1,6 @@
 
-NODE_ENV="development"
 SHRIMPLE_DEV="yes"
-SHRIMPLE_DB="./db/sqlite"
 SHRIMPLE_PORT="8080"
+SHRIMPLE_DATA="./data"
+NODE_ENV="development"
 
